Stopgap z-index solution to keep logo on top

--- a/kalite/static/css/khan-lite.css
+++ b/kalite/static/css/khan-lite.css
@@ -62,6 +62,7 @@ a:hover {
 #top-header #logo {
     position: absolute;
     top: 0;
+    z-index: 50; /*TODO(dylan): stopgap solution;*/
 }
 
 #logo-image-small img {
